test: 팩토리 메서드 단위 테스트